--- a/lesson12_gulp-webpack/gulp/package.json
+++ b/lesson12_gulp-webpack/gulp/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/register": "^7.18.9",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0"
   },
   "dependencies": {
     "del": "^7.0.0",
